<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.6">
  <DUT Name="ST_ADSReadState" Id="{8cc3f91e-2494-478b-9293-df13b6a1cbab}">
    <Declaration><![CDATA[TYPE ST_ADSReadState :
STRUCT
	nAdsState			: DINT;			(* ADS state *)
	nDeviceState		: DINT;			(* Device state *)
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>