<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.6">
  <DUT Name="ST_UAMethodCall_AdsReadStateRes" Id="{2cceb4a2-2622-417e-b07d-389856d7f284}">
    <Declaration><![CDATA[TYPE ST_UAMethodCall_AdsReadStateRes :
STRUCT
	nNumberOfOutputArguments	: UDINT;
	nReserved					: ARRAY [1..4] OF BYTE; // padding
	stOutputArgInfo				: ARRAY [1..3] OF ST_UAMethodArgInfo;
	stADSReadState				: ST_ADSReadState;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>